--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.13",
     "@mui/icons-material": "^5.15.8",
     "@mui/material": "^5.15.7",
     "@testing-library/jest-dom": "^5.17.0",
